Added JSON reader

--- a/rdftk_io/tests/w3c/xml/README
+++ b/rdftk_io/tests/w3c/xml/README
@@ -13,9 +13,9 @@ tests have a name (mf:name) and an input (mf:action). The Evaluation
 tests have an expected result (mf:result).
 
 • An implementation passes an Evaluation test if it parses the input
-  into a model.graph, parses the expected result into another model.graph, and
+  into a graph, parses the expected result into another graph, and
   those two graphs are isomorphic (see
-  <http://www.w3.org/TR/rdf11-concepts/#model.graph-isomorphism>).
+  <http://www.w3.org/TR/rdf11-concepts/#graph-isomorphism>).
 
 • An implementation passes a positive syntax test if it parses the
   input.
